<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/secretactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.giulia.inflatelist.SecretActivity">

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/secret_text_name_number"
        android:layout_marginTop="@dimen/secret_marginTop_name"
        android:text="Nome" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/secret_marginTop_name"
        android:text="@string/secret_edit_name"
        android:textSize="@dimen/secret_size_name_number" />


    <TextView
        android:id="@+id/textNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/secret_marginTop_number"
        android:text="Numero"
        android:textSize="@dimen/secret_text_name_number" />

    <EditText
        android:id="@+id/editNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/secret_marginTop_number"
        android:text="@string/secret_edit_number"
        android:textSize="@dimen/secret_size_name_number" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/secret_button_marginTop"
        android:text="@string/secret_button_value" />


</RelativeLayout>